Changed header colors so they are visible and fixed merge issuesd

--- a/app/src/styles.css
+++ b/app/src/styles.css
@@ -126,3 +126,7 @@ body{
 .footer{
     background: #ACDEDA !important;
 }
+
+.not-logged-in{
+    color:#f7f7f4;
+}
